syntax = "proto3";

package erda.core.dop.autotest.testplan;
option go_package = "github.com/erda-project/erda-proto-go/core/dop/autotest/testplan/pb";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service TestPlanService {
  rpc UpdateTestPlanByHook (TestPlanUpdateByHookRequest) returns (TestPlanUpdateByHookResponse)  {
    option (google.api.http) = {
      post: "/api/autotests/actions/plan-execute-callback",
    };
  }
}

// TestPlanUpdateByHooksRequest update testPlan by hook (post /api/autotests/actions/plan-execute-callback )
message TestPlanUpdateByHookRequest{
  string event = 1;
  string action = 2;
  string orgID = 3;
  string projectID = 4;
  string applicationID = 5;
  string env = 6;
  string timestamp = 7;
  Content content = 8;
}

message Content {
  uint64 testPlanID = 1;
  string executeTime = 2;
  double passRate = 3;
  int64 apiTotalNum = 4;
  // time duration of the test plan execution
  string executeDuration = 5;
}

message TestPlanUpdateByHookResponse {
  uint64 data = 1;
}
